--- a/home.html
+++ b/home.html
@@ -79,18 +79,19 @@
         <section id="testimonials">
             <div class="intro">
                 <h2>Hear from some of our lovely customers...</h2>
-                <p>When are you ordering your first box of our Delicious Goodies?^_^</p>
+                <p>When are you ordering your first box of our Delicious Goodies? 
+                    ^_^</p>
             </div>
             <div class="testimonials-container">
                 <div class="testimonial">
                     <dl>
-                        <dt>Super delicious cookies! Tried Coconut crunch cookies as well as Chocolate chip cookies, both were distinctive and very rich in taste. Texture of cookies was crisp from outside snd perfectly chewy from inside. Coconut cookies were just the proper amount of sweet and not too much, complementing the coconut flavour. Chocolate chip cookies had balanced taste of both saltiness and sweetness, along with the chocolaty flavour and chunks of chocolate chips in between. You know it's homemade from the very first bite, the taste and quality was too good, something that store cookies can never assure.</dt>
+                        <dt>"Super delicious cookies! Tried Coconut crunch cookies as well as Chocolate chip cookies, both were distinctive and very rich in taste. Texture of cookies was crisp from outside snd perfectly chewy from inside. Coconut cookies were just the proper amount of sweet and not too much, complementing the coconut flavour. Chocolate chip cookies had balanced taste of both saltiness and sweetness, along with the chocolaty flavour and chunks of chocolate chips in between. You know it's homemade from the very first bite, the taste and quality was too good, something that store cookies can never assure."</dt>
                         <dd>-Customer</dd>
                     </dl>
                 </div>
                 <div class="testimonial">
                     <dl>
-                        <dt>Just ate those cookies today morning, and they were just fantastic, extremely delicious and truly mouthwatering. Eagerly waiting for another upcoming item.</dt>
+                        <dt>"Just ate those cookies today morning, and they were just fantastic, extremely delicious and truly mouthwatering. Eagerly waiting for another upcoming item."</dt>
                         <dd>-Customer</dd>
                     </dl>
                 </div>
