--- a/home.html
+++ b/home.html
@@ -30,14 +30,14 @@
             <div class="bg-text">
                 <h2>Welcome to</h2>
                 <h1>Sweet Journeys</h1>
-                <p>handcrafted sweet treats</p>
+                <p class="orange-text">handcrafted sweet treats</p>
             </div>
         </section>
 
         <section id="products">
             <div class="intro">
                 <h2>Indulge in Our Homemade Creations</h2>
-                <p>At <span>Sweet Journeys</span>, every bite tells a story of love, passion, and tradition. Our menu features a variety of homemade goodies, crafted to bring a smile to your face. Indulge in our soft, chewy cookies that melt in your mouth, savor the rich flavors of our moist and decadent cakes, and treat yourself to our fudgy, irresistible brownies. Whether you’re craving a classic favorite or something new, we’ve got just the thing to satisfy your sweet tooth. Explore our menu and treat yourself to the warmth and comfort of home-baked goodness.</p>
+                <p>At <span class="orange-text">Sweet Journeys</span>, every bite tells a story of love, passion, and tradition. Our menu features a variety of homemade goodies, crafted to bring a smile to your face. Indulge in our soft, chewy cookies that melt in your mouth, savor the rich flavors of our moist and decadent cakes, and treat yourself to our fudgy, irresistible brownies. Whether you’re craving a classic favorite or something new, we’ve got just the thing to satisfy your sweet tooth. Explore our menu and treat yourself to the warmth and comfort of home-baked goodness.</p>
             </div>
             <div class="product-info">
                 <img class="product-img" src="./images/cookies1.png">
