updated home.html and styles.css
- moved the "overlay" div element within the bg-img div
- solved the issue where both div had different heights
- removed the absolute positioning from overlay container
- changed background color of welcome section to light gray

--- a/home.html
+++ b/home.html
@@ -25,8 +25,9 @@
         </header>
 
         <section id="welcome">
-            <div class="bg-img"></div>
-            <div class="overlay"></div>
+            <div class="bg-img">
+                <div class="overlay"></div>
+            </div>
             <div class="bg-text">
                 <h2>Welcome to</h2>
                 <h1>Sweet Journeys</h1>
