updated home.html and styles.css
- moved the bg-text container inside the overlay container
- removed the absolute positioning from bg-text container
- gave flex positioning to overlay container

--- a/home.html
+++ b/home.html
@@ -26,13 +26,15 @@
 
         <section id="welcome">
             <div class="bg-img">
-                <div class="overlay"></div>
+                <div class="overlay">
+                    <div class="bg-text">
+                        <h2>Welcome to</h2>
+                        <h1>Sweet Journeys</h1>
+                        <p class="orange-text">handcrafted sweet treats</p>
+                    </div>
+                </div>
             </div>
-            <div class="bg-text">
-                <h2>Welcome to</h2>
-                <h1>Sweet Journeys</h1>
-                <p class="orange-text">handcrafted sweet treats</p>
-            </div>
+            
         </section>
 
         <section id="products">
